Migrate tests to JUnit5 (#339)
* Migrate tests to JUnit5

* Migrate annotations and imports
* Migrate assertions
* Remove public visibility for test classes and methods
* Minor clean up

* Format with spotless

---------

Co-authored-by: strangelookingnerd <strangelookingnerd@users.noreply.github.com>
Co-authored-by: Mark Waite <mark.earl.waite@gmail.com>